--- a/grpc-java-lab/grpc-java-web/src/main/resources/templates/usuario.html
+++ b/grpc-java-lab/grpc-java-web/src/main/resources/templates/usuario.html
@@ -3,8 +3,11 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{main-layout/layout}" lang="es">
 
-<body>
+<head>
+    <title layout:fragment="pageTitle">gRPC Java Lab - Usuario</title>
+</head>
 
+<body>
 <!-- Contenido que se inyectará en layout.html -->
 <div layout:fragment="content" >
 
