--- a/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/layout.html
+++ b/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/layout.html
@@ -2,14 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" lang="es">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <!-- CSRF Meta Tags para HTMX -->
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+
+    <title layout:fragment="pageTitle">gRPC Java Lab - Layout</title>
 
     <!-- Custom fonts for this template-->
     <link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -24,46 +27,21 @@
 
 <body id="page-top">
 
-<!-- Page Wrapper -->
 <div id="wrapper">
-
-    <!-- Sidebar -->
     <th:block layout:insert="main-layout/sidebar.html" />
-    <!-- End of Sidebar -->
-
-    <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
-
-        <!-- Main Content -->
         <div id="content">
-
-            <!-- Topbar -->
             <th:block layout:insert="main-layout/topbar.html" />
-            <!-- End of Topbar -->
-
-            <!-- Begin Page Content -->
             <div class="container-fluid" layout:fragment="content"></div>
-
         </div>
-        <!-- End of Main Content -->
-
-        <!-- Footer -->
         <th:block th:insert="main-layout/footer.html" />
-
-        <!-- End of Footer -->
-
     </div>
-    <!-- End of Content Wrapper -->
-
 </div>
-<!-- End of Page Wrapper -->
 
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
 </a>
 
-<!-- Logout Modal-->
 <th:block layout:insert="main-layout/logout-modal.html" />
 
 <!-- Bootstrap core JavaScript-->
@@ -75,13 +53,10 @@
 
 <!-- Custom scripts for all pages-->
 <script th:src="@{/js/sb-admin-2.min.js}"></script>
+<script th:src="@{/js/main-app.js}"></script>
 
-<!-- Page level plugins -->
-<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-
-<!-- Page level custom scripts -->
-<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
+<!-- Page level scripts -->
+<th:block layout:fragment="page-js"></th:block>
 
 </body>
 
