--- a/grpc-java-lab/grpc-java-web/src/main/resources/templates/index/tables.html
+++ b/grpc-java-lab/grpc-java-web/src/main/resources/templates/index/tables.html
@@ -511,9 +511,12 @@
 
 </div>
 
+<th:block layout:fragment="page-head-ext">
+    <link th:href="@{/vendor/datatables/2.3.2/dataTables.min.css}" rel="stylesheet" type="text/css">
+</th:block>
+
 <th:block layout:fragment="page-js">
-    <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
-    <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+    <script th:src="@{/vendor/datatables/2.3.2/dataTables.min.js}"></script>
     <script th:src="@{/js/demo/datatables-demo.js}"></script>
 </th:block>
 
