--- a/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/layout.html
+++ b/grpc-java-lab/grpc-java-web/src/main/resources/templates/main-layout/layout.html
@@ -53,6 +53,9 @@
 <!-- Core plugin JavaScript-->
 <script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
 
+<!-- htmx -->
+<script th:src="@{/vendor/htmx/2.0.6/htmx.min.js}"></script>
+
 <!-- Custom scripts for all pages-->
 <script th:src="@{/js/sb-admin-2.min.js}"></script>
 <script th:src="@{/js/main-app.js}"></script>
